--- a/cpp_linq/cpp_linq.vcxproj
+++ b/cpp_linq/cpp_linq.vcxproj
@@ -116,6 +116,9 @@
   <ItemGroup>
     <ClCompile Include="cpplinq.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
